# soil

./: .gitignore  API.xmind  Bff.xmind  CESS前端.xmind  CESS规则timeSpan.xmind  Git.xmind  Go.xmind  LICENSE  Nginx配置参数说明.xmind  README.md  cubejs.drawio  soil.xmind  soil_private.pem  前端开发工程师.xmind  单点登录.xmind  召回算法-候选规则扩展.xmind  天枢管理平台.xmind  微信公众号.xmind  指标层级呈现.xmind  数据库.xmind  数据引入.drawio  未命名绘图.drawio  用户实时分群.xmind  移动端的实现.xmind
soil/: 3.6_requirements.txt  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  setup.py  未命名绘图.drawio
soil-dashboard/:  智能客服.xmind  CESS 2.2.0.xmind  CESS 2.2.0技术实现.xmind  Class.xmind  HTTP.xmind  Let and Const.xmind  测试.xmind  (+16 more)
soil-dashboard-ts/: .eslintrc.js  README.md  React原理分析图.xmind  package-lock.json  package.json
soil/docs/mysql/database/create/: soil.sql
soil/docs/mysql/database/drop/: soil.sql
soil/etc/: api-paste.ini  soil.conf  soil.conf.sample
soil/etc/soil/: api-paste.ini  soil-config-generator.conf  soil.conf  soil.conf.sample
soil/soil/: __init__.py  baserpc.py  config.py  context.py  exception.py  i18n.py  opts.py  rpc.py  service.py  version.py
soil/soil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
soil/soil/api/: extensions.py  versions.py
soil/soil/api/contrib/: demo_tag.py
soil/soil/api/middleware/: __init__.py  auth.py  authenticate.py  fault.py  filter.py
soil/soil/api/server/: __init__.py  wsgi.py
soil/soil/api/utils/vmware/: base.py  common.py  exception.py  hybrid.py  serviceutil.py  tasks.py  vmware.py
soil/soil/api/v1/: router.py
soil/soil/api/v1/license/: rsa_license.py
soil/soil/api/v1/openstack/: __init__.py
soil/soil/api/v1/openstack/compute/: __init__.py  instances.py
soil/soil/api/v1/openstack/network/: networks.py
soil/soil/api/v1/vmware/: vcenter.py
soil/soil/api/views/: versions.py
soil/soil/api/views/openstack/compute/: instances.py
soil/soil/api/views/openstack/network/: networks.py
soil/soil/api/views/vmware/: vcenter.py
soil/soil/authenticate/: token.py
soil/soil/cmd/: api.py  engine.py
soil/soil/conf/: __init__.py  api.py  database.py  destination_cluster.py  opts.py  paths.py  rpc.py  rsa_license.py  service.py  source_cluster.py  wsgi.py
soil/soil/db/: __init__.py  api.py  constants.py  models.py
soil/soil/db/sqlalchemy/: api.py  models.py  types.py
soil/soil/engine/: manager.py
soil/soil/openstack/: base.py  ceph_image.py  ceph_snapshot.py  common.py  flavor.py  floatingip.py  image.py  instance.py  network.py  port.py  security_group.py  snapshot.py  volume.py  volume_type.py
soil/soil/plugin/: cinder.py  glance.py  neutron.py  nova.py  openstack.py  utils.py
soil/soil/server/: wsgi.py
soil/soil/utils/: crypto_rsa.py  log.py  request.py
soil/soil/wsgi/: common.py  server.py
(+62 files in other folders)
