[metadata]
name = soil
summary = Cloud manage vmware vsphere controller
description-file = 
    README.rst
author = jackdan    
author-email = j.dan2016@gmail.com
home-page = https://github.com/JackDan9/soil
classifier = 
    Environment :: Openstack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = 
    soil

[entry_points]
oslo.config.opts = 
    soil = soil.opts:list_opts
console_scripts = 
    soil-api = soil.cmd.api:main
    soil-engine = soil.cmd.engine:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = soil/locale
domain = soil

[update_catalog]
domain = soil
output_dir = soil/locale
input_file = soil/locale/soil.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = soil/locale/soil.pot
