[metadata]
name = soil
summary = Basic Python framework including REST API, database access, RPC, etc. 
description-file =
    README.rst
author = JackDan
author-email = j.dan92016@gmail.com
home-page = https://github.com/JackDan9
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    soil

[entry_points]
oslo.config.opts =
    soil = soil.opts:list_opts
console_scripts =
    soil-api = soil.cmd.api:main
    soil-engine = soil.cmd.engine:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = soil/locale
domain = soil

[update_catalog]
domain = soil
output_dir = soil/locale
input_file = soil/locale/soil.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = soil/locale/soil.pot
